<resources>
    <!-- String related to top bar -->
    <string name="app_name">TopID</string>
    <string name="menu">Menu</string>
    <string name="title_activity_login">Log in</string>
    <string name="idee">Ideeën en op- en aanmerkingen</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="inbox">Inbox</string>
    <string name="uitloggen">Uitloggen</string>
    <string name="title_activity_homescreen">Homescreen</string>
    <string name="ideeën">Ideeën en opmerkingen</string>
    <string name="GevolgdeIdeeën">Gevolgde posts</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_idee">IdeeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="klachten">Klachten</string>
    <string name="title_activity_main_activity_klachten">MainActivityKlachten</string>


</resources>
