<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeScreenBackground">

    <ImageView
        android:id="@+id/iv_homescreen_user"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_homescreen_user_name"
        android:src="@drawable/gabenewell" />

    <TextView
        android:id="@+id/tv_homescreen_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="ingelogde user"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_homescreen_inbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:layout_below="@+id/iv_homescreen_user"
        android:text="@string/inbox"
        android:layout_marginLeft="25sp"
        android:textSize="25sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_homescreen_ideeën"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ideeën"
        android:layout_marginLeft="25sp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_below="@id/tv_homescreen_inbox"/>


    <TextView
        android:id="@+id/tv_homescreen_instellingen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:text="@string/instellingen"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_below="@+id/tv_homescreen_ideeën"/>
    <TextView
        android:id="@+id/tv_homescreen_uitloggen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uitloggen"
        android:layout_below="@id/tv_homescreen_instellingen"
        android:layout_marginLeft="25sp"
        android:textSize="25sp"
        android:textColor="@color/white"/>


</RelativeLayout>